--- a/main.html
+++ b/main.html
@@ -108,7 +108,7 @@ Node js. </p>
       </div>
     </div>
     <div class="text-block">
-      <p>The most recent project i worked on was a Portfolio Websiteto present somebody the details can be got by clicking on learn more bottum.</p>
+      <p>The most recent project i worked on was a Portfolio Websiteto present somebody the details of this project is reflected on this websit.</p>
       <button class="start-button">Learn More</button>
     </div>
   <div class="circle-nav">
